# zedworkspace

./: Cargo.toml  README.md
crates/picker/: Cargo.toml
crates/picker/src/: head.rs  picker.rs
crates/story/src/: lib.rs
crates/tab_switcher/: Cargo.toml
crates/tab_switcher/src/: tab_switcher.rs
