[package]
name = "picker"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"

[lib]
path = "src/picker.rs"
doctest = false

[features]
test-support = []

[dependencies]
anyhow.workspace = true
gpui.workspace = true
menu.workspace = true
serde.workspace = true
ui.workspace = true
workspace.workspace = true
